Fix and add traitcombine